Fix horizontal scrollbar

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -151,6 +151,8 @@ h1, h2, h3, h4, .page-title {
   top: 0;
   height: 420px;
   width: 100%;
+  left: 0;
+  right: 0;
 }
 .svg-snow .snow {
   fill: #fff;
